--- a/AngularProjectInventory/appsettings.json
+++ b/AngularProjectInventory/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
       }
     },
-"AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DevConnection": "Data Source=DESKTOP-64BENGS\\SQLEXPRESS;Initial Catalog=InventoryManagementSystem;Integrated Security=True"
+  }
 }
